--- a/style.css
+++ b/style.css
@@ -1,70 +1,118 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body.pink {
+  --bg-color: #FFF7e4;
+  --text-color: #777f99;
+  --primary-color:white;
+  --primary-color-dark: #eecfb2;
+  
+
+}
+
 body {
-    font-family: 'Inter', sans-serif;
-    text-align: center;
-    margin: 0;
+  background: var(--bg-color);
+  /* font-family: 'Roboto', sans-serif; */
+  font-family: 'Open Sans', sans-serif;
+  color: var(--text-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
-#hero {
-    width: 592px;
-    margin: auto;
-    margin-bottom: 72px;
-
+body{
+  background-image: url('https://images.msha.ke/ca4cf415-6c65-4152-aa0b-94ea6208456a?auto=format%2Ccompress&cs=tinysrgb&q=30&w=828');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
-
-#hero img {
-   margin-bottom: 72px;
-
-}
-h1 {
-    font-family: 'Inter', sans-serif;
-    font-size: 49px;
-    line-height: 56px;
-    font-weight: normal;
-    margin-bottom: 32px;
-    
-
-}
-
-h1 span {
-    font-weight: bold;
-}
-
-span, a {
-
-    color: #FF9900;
-
+h1,h3{
+  color: white;
+  margin-top: 1.5rem;
 }
 
 
-p {
+p{
+  color: white;
+  display: flex;
+  white-space:break-spaces;
+  justify-content: center;
+  align-items: center;
+  font-size: 11px;
+  margin-top: 20px;
+}
 
-    color: #7D7987;
-    font-size: 14px;
-    line-height: 28px ;
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  max-width: 1080px;
+  width: 100%;
+  height: 100%;
+}
 
+ul {
+  list-style: none;
+  /* margin-top: 80px; */
+  margin-bottom: 250px;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul li + li {
+  margin-top: 16px;
 }
 
 
-#footer a + a{
+ul li a {
+  height: 53px;
+  width: 130px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--primary-color);
+  color: black;
+  /* text-transform: uppercase; */
+  font-size: 12px;
+  border-radius: 6px;
 
-    margin-left: 28px;
-    font-size: 14px;
-    line-height: 28px;
-
+transition: background(200ms);
 }
 
-#line {
-    width: 568px;
-    height: 0;
-    margin: 0 auto 8px;
-    border: 1px #7D7987 solid;
-
+ul li a img{
+  display: flex;
+  height: 100%;
+ 
+}
+ul li a:hover {
+  background: var(--primary-color-dark);
 }
 
-#balls {
-    position: fixed;
-    top: 0px;
-    bottom: 0px;
-    right: 0px;
-
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-weight: 500;
+  font-size: 12px;
+  opacity: 0.6;
+  transition: opacity 200ms;
+  margin: 16px 0;
 }
+
+footer:hover {
+  opacity: 1;
+}
+
+ footer a {
+   color: white;
+   margin-top: 40px;
+ }
