--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   background: var(--bg-color);
   /* font-family: 'Roboto', sans-serif; */
   font-family: 'Open Sans', sans-serif;
-  color: var(--text-color);
+  color: var(white);
   display: flex;
   flex-direction: column;
   align-items: center;
